# openadapt-bootstrap

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  DELIVERABLES.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md
examples/: generate_benchmark_screenshots.py
tests/: test_workflows.py
workflows/: __init__.py  base.py  demo_generation.py  screenshot_workflow.py
