[project]
name = "openadapt-bootstrap"
version = "0.1.0"
description = "Self-hosting infrastructure for OpenAdapt recursive development"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "OpenAdapt AI", email = "info@openadapt.ai" }
]
keywords = ["openadapt", "automation", "self-hosting", "workflows", "gui-automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "openadapt-capture>=0.1.0",
    "anthropic>=0.40.0",
    "pillow>=10.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]
github = [
    "PyGithub>=2.0.0",
]
all = [
    "openadapt-bootstrap[dev,github]",
]

[project.urls]
Homepage = "https://github.com/OpenAdaptAI/openadapt-bootstrap"
Documentation = "https://github.com/OpenAdaptAI/openadapt-bootstrap/blob/main/README.md"
Repository = "https://github.com/OpenAdaptAI/openadapt-bootstrap"
Issues = "https://github.com/OpenAdaptAI/openadapt-bootstrap/issues"

[project.scripts]
openadapt-bootstrap = "openadapt_bootstrap.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
